--- a/homepage.html
+++ b/homepage.html
@@ -27,28 +27,28 @@
       <img src="img/swedish.jpg" alt="Service 1">
       <h3>Swedish Massage (60 minutes)</h3>
       <p>A gentle, full-body massage that uses long, flowing strokes, kneading, and circular movements to promote relaxation and improve circulation.</p>
-      <p><strong>Price:</strong>₱400</p>
+      <p><strong>Price:</strong>$400</p>
       <a href="user.php">Book now</a>
     </div>
     <div class="service-card">
       <img src="img/deeptissue.jpg" alt="Service 2">
       <h3>Deep Tissue Massage (60 minutes)</h3>
       <p>Focuses on deeper layers of muscles and connective tissue. It uses slower, more intense strokes to relieve chronic pain, tension, and muscle stiffness.</p>
-      <p><strong>Price:</strong>₱500</p>
+      <p><strong>Price:</strong>$500</p>
       <a href="user.php">Book Now</a>
     </div>
     <div class="service-card">
       <img src="img/sports.jpg" alt="Service 3">
       <h3>Sports Massage (60 minutes)</h3>
       <p>Tailored for athletes, this massage helps prevent injuries, relieve muscle soreness, and enhance performance through targeted techniques.</p>
-      <p><strong>Price:</strong>₱500</p>
+      <p><strong>Price:</strong>$500</p>
       <a href="user.php">Book Now</a>
     </div>
     <div class="service-card">
       <img src="img/hotstone.jpg" alt="Service 4">
       <h3>Hot Stone Massage (60 minutes)</h3>
       <p>Heated stones are placed on specific body parts and used during the massage to ease muscle tension, improve blood flow, and promote relaxation.</p>
-      <p><strong>Price:</strong>₱800</p>
+      <p><strong>Price:</strong>$800</p>
       <a href="user.php">Book Now</a>
     </div>
   </section>
